- Bug fixes.   - Handling of individual guest error messages when working with registration packets.   - Centralizing the logic for whether an attendee preexists.   - Ensure no null values are returned in response entities.   - Refinement and corrections of various Validator conditionals. - Handling of more generalized error messages.